# llvm-conan-recipe

./: LICENSE  README.md
.github/workflows/: test.yml
recipes/llvm/: config.yml
recipes/llvm/all/: conandata.yml  conanfile.py
recipes/llvm/all/patches/21x/: 0000-cmake-dependencies.patch
recipes/llvm/all/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
test/: CMakeLists.txt  conanfile.txt  test.cpp
